<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.emonotion.app.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.emonotion.app.ui.calendar.CalendarFragment"
        android:label="@string/nav_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.emonotion.app.ui.notes.NotesFragment"
        android:label="@string/nav_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_entry"
        android:name="com.emonotion.app.ui.entry.DailyEntryFragment"
        android:label="@string/diary"
        tools:layout="@layout/fragment_daily_entry" />

    <fragment
        android:id="@+id/navigation_analytics"
        android:name="com.emonotion.app.ui.analytics.AnalyticsFragment"
        android:label="@string/analytics"
        tools:layout="@layout/fragment_analytics" />

</navigation>
